feat: "기본다이얼로그 커스텀다이얼로그로 변경"
비슷한UI 글씨체 볼드체로 변경

Related to: main #161

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="dialog_end_again">정말 종료하시겠습니까?</string>
     <!--Notice-->
     <string name="notice_keyword">키워드 알림</string>
+    <string name="notice_keyword_info">선택한 키워드 물건 알림</string>
     <string name="notice_keyword_message">선택한 키워드에 대한 알림이 도착햇습니다!</string>
 </resources>
